# test_client_server

./: CMakeLists.txt
client/: client.h  main.cpp
common/: command.cpp  command.h  get_color_command.h  get_rate_command.h  get_state_command.h  led.h  set_color_command.h  set_rate_command.h  set_state_command.h
server/: main.cpp  server.h  session.cpp  session.h
